--- a/trezello/src/main/resources/static/index.html
+++ b/trezello/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Trezello — Tasks</title>
+  <title>Trezello Tasks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/app.css" />
 </head>
